# SOLRead

./: README.md  pyproject.toml
src/solread/: cmds.py  exceptions.py  interface.py  mathcore.py
