[tool.poetry]
name = "solread"
version = "0.1.1"
description = "Solar cell reader for Python 3.12+"
authors = ["AineMedias <nurivandijk@hotmail.com>"]
readme = "README.md"
packages = [{include = "solread", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
