[tool.poetry]
name = "solread"
version = "0.2.0"
description = "Solar cell reader for Python 3.10+"
authors = ["AineMedias <nurivandijk@hotmail.com>"]
readme = "README.md"
packages = [{include = "solread", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pyvisa = "^1.14.1"
rich = "^13.7.0"
pyserial = "^3.5"


[tool.poetry.group.dev.dependencies]
nsp2visasim = "^1.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
