[tool.poetry]
name = "solread"
version = "1.0.0a"
description = "Solar cell reader for Python 3.10+"
authors = ["AineMedias <nurivandijk@hotmail.com>"]
readme = "README.md"
packages = [{include = "solread", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pyvisa = "^1.14.1"
rich = "^13.7.0"
pyserial = "^3.5"
numpy = "^1.26.2"
matplotlib = "^3.8.2"
pandas = "^2.1.4"
pyvisa-py = "^0.7.1"
psutil = "^5.9.6"
zeroconf = "^0.128.4"


[tool.poetry.group.dev.dependencies]
nsp2visasim = "^1.3.1"

[tool.poetry.scripts]
solread = "solread.cmds:solread"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
